even more PR feedback